[package]
name = "binius_mpt_verifier_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap = "2.34.0"
tokio = "1.42.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
binius_mp3.path = "../m3"
tracing-profile = "0.9.0"
